src/objects/Goal__c.object
<CustomObject>
    <description>To be used to capture Global Standard Goals.</description>
    <fields>
        <fullName>Analyst_Meeting__c</fullName>
        <label>Analyst Meeting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Work__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Audit Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Engagement__c</fullName>
        <label>Client Engagement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Reporting_Package__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Client Reporting Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Review_Meetings__c</fullName>
        <label>Client Review Meetings</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Certification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Compliance Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Monitoring__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Compliance Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Meetings__c</fullName>
        <label>Consultant Meetings</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Investment_Restrictions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Custom Investment Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_of_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery of Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Dilligence_Meetings__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Due Dilligence Meetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Dilligence_Reporting_DDQs__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Due Dilligence Reporting &amp; DDQs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factsheet_Investment_Update__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Factsheet / Investment Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Person_Topical_Reviews_Custom_Reviews__c</fullName>
        <defaultValue>true</defaultValue>
        <label>In-Person Topical Reviews/Custom Reviews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institutional_Portfolio_Manager__c</fullName>
        <label>Institutional Portfolio Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment_Commentary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Investment Commentary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investment_Product_Specialist__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Investment Product Specialist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Agreements__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Legal Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFS_Client_Conferences_Seminars__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MFS Client Conferences / Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFS_Conference_Calls_Webinars__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MFS Conference Calls / Webinars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFS_Hosted_Customized_Education_Meetings__c</fullName>
        <defaultValue>true</defaultValue>
        <label>MFS Hosted Customized Education Meetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFS_Sponsorship_of_Client_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MFS Sponsorship of Client Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Partnership__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Marketing Campaign Partnership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio_Manager__c</fullName>
        <label>Portfolio Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Content__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Reporting Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_for_Proposal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Request for Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requests_Inquies_on_Current_events__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Requests / Inquies on Current Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Management_Reporting__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Risk Management Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SME_Meetings__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SME Meetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Day_Acknowledgement__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Same Day Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sr_Executive_Meeting__c</fullName>
        <label>Sr. Executive Meeting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sr_Executive_Speaker_Client_Event__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sr. Executive Speaker @ Client Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sr_Investment_Speaker_Client_Events__c</fullName>
        <label>Sr. Investment Speaker @ Client Events</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thought_Leadership_Publication__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Thought Leadership Publication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transition_Analysis_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition Analysis Reporting</label>
        <type>Checkbox</type>
    </fields>
    <label>Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <recordTypes>
        <fullName>Institutional</fullName>
        <active>true</active>
        <description>To be used to capture Institutional Goals</description>
        <label>Institutional</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>